# FrankaAssembly

./: .gitignore  assembly_dual_offline.py  assembly_dual_realtime.py  assembly_dual_sync.py  collect_data.py  collect_data_pickstation.py  grippers_open.py  movel.py  movel_cali.py  mqtt.py  mqtt_send.py  pyproject.toml  test.py  test_pick_and_place_dual.py  test_pick_and_place_dual_calibration.py  test_pick_and_place_dual_finetune.py  test_pick_and_place_dual_finetune_movel_test.py  test_pick_and_place_dual_first.py  test_pick_and_place_dual_offline.py  test_pick_and_place_fast.py  test_pick_and_place_fast_right.py  test_pick_and_place_left.py
Collect_data/: calc.json
Collect_data/robot0/centerleft_1/: cart_pos_0.csv  cart_pos_1.csv  hole_0.csv  hole_1.csv
Collect_data/robot0/centerleft_2/: cart_pos_0.csv  cart_pos_1.csv  hole_0.csv  (+1 more)
Collect_data/robot0_pick/: js_0.json  js_1.json  js_2.json  js_3.json  js_4.json  js_5.json  js_6.json  js_7.json
Collect_data/tcptest/: cart_pos_0.csv  hole_0.csv
Dual-robots/: saved_plan_print_dual_0417.json
Rob_left/: saved_plan_print_left.json
script/: assembly_byd_offline.py  assembly_byd_realtime.py  assembly_byd_sync.py  assembly_byd_sync_mqtt.py  assembly_dual_offline.py  assembly_dual_realtime.py  assembly_dual_sync.py  collect_data.py  examples.py  grippers_open.py  home.py  mqtt_receive.py  mqtt_send.py
script/autograsp/: assembly_byd_grasp.py  grasp.py  pick_frames.json  plan_grasp.py  robot_joints.json  traj_0.json  traj_3.json  traj_4.json  traj_5.json  traj_6.json  traj_9.json
src/franka_assembly/: __init__.py
(+108 files in other folders)
